'Reload' on linked libraries disconnects proxy armature datablocks #64764

Closed
opened 2019-05-17 17:59:14 +02:00 by Tristan · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Quadro 2000/PCIe/SSE2 NVIDIA Corporation 4.4.0

Blender Version
Broken: version: 2.80 (sub 66), branch: master, commit date: 2019-05-16 12:17, hash: e60890075b
Worked: (optional)

Short description of error
'Reload' in the Blender File Outliner will cause Blender to disconnect armature datablocks of libraries used by local proxies.

Exact steps for others to reproduce the error
Demo: Open shot.blend, right click //asset.blend in the outliner and perform 'Reload'.

This happens with proxies from collection instances, as well as uninstanced collections.

Error message:
Lib Reload: Replacing all references to old data-block 'OBArmature~000' by reloaded one failed, old one (1 remaining users) had to be kept and was renamed to 'OBArmature~000~000'
Lib Reload: Replacing all references to old data-block 'OBArmature' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'OBArmature~000'
Lib Reload: Replacing all references to old data-block 'GRCollection' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'GRCollection~000'
Lib Reload: Replacing all references to old data-block 'ARArmature' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'ARArmature~000'

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Quadro 2000/PCIe/SSE2 NVIDIA Corporation 4.4.0 **Blender Version** Broken: version: 2.80 (sub 66), branch: master, commit date: 2019-05-16 12:17, hash: `e60890075b` Worked: (optional) **Short description of error** 'Reload' in the Blender File Outliner will cause Blender to disconnect armature datablocks of libraries used by local proxies. **Exact steps for others to reproduce the error** Demo: Open shot.blend, right click //asset.blend in the outliner and perform 'Reload'. This happens with proxies from collection instances, as well as uninstanced collections. Error message: Lib Reload: Replacing all references to old data-block 'OBArmature~000' by reloaded one failed, old one (1 remaining users) had to be kept and was renamed to 'OBArmature~000~000' Lib Reload: Replacing all references to old data-block 'OBArmature' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'OBArmature~000' Lib Reload: Replacing all references to old data-block 'GRCollection' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'GRCollection~000' Lib Reload: Replacing all references to old data-block 'ARArmature' by reloaded one failed, old one (2 remaining users) had to be kept and was renamed to 'ARArmature~000'
Author

Added subscriber: @Plyro

Added subscriber: @Plyro
Author

Accidentally deleted the blend files from the original report. Here they are:

reload_library.zip

Accidentally deleted the blend files from the original report. Here they are: [reload_library.zip](https://archive.blender.org/developer/F7043663/reload_library.zip)
Bastien Montagne self-assigned this 2019-05-21 10:49:38 +02:00

This issue was referenced by 5a3c44937f

This issue was referenced by 5a3c44937f64776099125577126766c67f96139a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @Sergey

Added subscriber: @Sergey

That ended up being an epic can of worms, took me two days to fully understand the three levels of bugs that were playing together some nasty tricks. :/

Note that there is still a weird missing of update after lib reload (proxy remains 'detached'), this goes away after an undo/redo or file save/reload… Not sure what happens here exactly, since depsgraph relations are fully rebuilt… @Sergey maybe you have an idea? Probably some missing update, but have no idea which one.

That ended up being an epic can of worms, took me two days to fully understand the three levels of bugs that were playing together some nasty tricks. :/ Note that there is still a weird missing of update after lib reload (proxy remains 'detached'), this goes away after an undo/redo or file save/reload… Not sure what happens here exactly, since depsgraph relations are fully rebuilt… @Sergey maybe you have an idea? Probably some missing update, but have no idea which one.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Nailed it, should be OK now (at last…).

Nailed it, should be OK now (at last…).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64764
No description provided.